[eojin][update] Post 도메인 2차 수정